--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
     <!--
         - Home
     -->
-    <div class="home section" id="home">
-        <div class="home__container container grid">
-            <h1 class="home__text">Hi.</h1>
-            <div class="home__info">
-                <p class="home__desc">
+    <div class="hero section" id="hero">
+        <div class="hero-container container grid">
+            <h1 class="hero-caption">Hi ヾ(•ω•`)o</h1>
+            <div class="hero-info">
+                <p class="hero-desc">
                     I'm Tan Jia Hui, <b>final year student</b> majoring in
-                    <a href="https://www.xmu.edu.my/2017/1222/c16268a323247/page.htm" class="home-link">Digital Media Technology</a>
-                    at <a href="https://www.xmu.edu.my/" class="home-link">Xiamen University Malaysia</a>.
+                    <a href="https://www.xmu.edu.my/2017/1222/c16268a323247/page.htm" class="hero-link">Digital Media Technology</a>
+                    at <a href="https://www.xmu.edu.my/" class="hero-link">Xiamen University Malaysia</a>.
                 </p>
-                <a href="#projects" class="home__scroll">
-                    <div class="home__scroll-box">
+                <a href="#projects" class="hero-scroll">
+                    <div class="hero-scrollbox">
                     <i class="uil-angle-down"></i>
                     </div>
-                    <span class="home__scroll-text">Scroll Down</span>
+                    <span class="hero-scrolltext">Scroll Down</span>
                 </a>
             </div>
         </div>
@@ -77,37 +77,37 @@
         - Projects
     -->
     <section class="projects section" id="projects">
-        <div class="projects__container container">
+        <div class="projects-container container">
             <h2 class="section-title">
                 <span>My Works.</span>
             </h2>
-            <ul class="projects__list grid">
-                <li class="projects__card">
-                    <a href="./projects/animation" target="_blank" class="projects__link">
-                    <h2 class="projects__text">Animation</h2>
-                    <div class="projects__overlay"></div>
-                    <img src="./assets/images/Animation.jpg" alt="" class="projects__img">
+            <ul class="projects-list grid">
+                <li class="projects-card">
+                    <a href="./projects/animation" target="_blank" class="projects-link">
+                    <h2 class="projects-text">Animation</h2>
+                    <div class="projects-overlay"></div>
+                    <img src="./assets/images/Animation.jpg" alt="" class="projects-img">
                     </a>
                 </li>
-                <li class="projects__card">
-                    <a href="./projects/app" target="_blank" class="projects__link">
-                    <h2 class="projects__text">Mobile App with UI / UX</h2>
-                    <div class="projects__overlay"></div>
-                    <img src="./assets/images/UI.jpg" alt="" class="projects__img">
+                <li class="projects-card">
+                    <a href="./projects/app" target="_blank" class="projects-link">
+                    <h2 class="projects-text">Mobile App with UI / UX</h2>
+                    <div class="projects-overlay"></div>
+                    <img src="./assets/images/UI.jpg" alt="" class="projects-img">
                     </a>
                 </li>
-                <li class="projects__card">
-                    <a href="./projects/game" class="projects__link">
-                    <h2 class="projects__text">Game Development</h2>
-                    <div class="projects__overlay"></div>
-                    <img src="./assets/images/Unity.jpg" alt="" class="projects__img">
+                <li class="projects-card">
+                    <a href="./projects/game" class="projects-link">
+                    <h2 class="projects-text">Game Development</h2>
+                    <div class="projects-overlay"></div>
+                    <img src="./assets/images/Unity.jpg" alt="" class="projects-img">
                     </a>
                 </li>
-                <li class="projects__card">
-                    <a href="./projects/video" target="_blank" class="projects__link">
-                    <h2 class="projects__text">Video Editing</h2>
-                    <div class="projects__overlay"></div>
-                    <img src="./assets/images/Video.jpg" alt="" class="projects__img">
+                <li class="projects-card">
+                    <a href="./projects/video" target="_blank" class="projects-link">
+                    <h2 class="projects-text">Video Editing</h2>
+                    <div class="projects-overlay"></div>
+                    <img src="./assets/images/Video.jpg" alt="" class="projects-img">
                     </a>
                 </li>
             </ul>
@@ -121,26 +121,23 @@
         <h2 class="section-title">
             <span>About Me.</span>
         </h2>
-        <div class="about__container container grid">
-            <div class="about__image">
-                <img src="./assets/images/Profile.jpg" alt="image" class="about__img">
-                <div class="about__box"></div>
+        <div class="about-container container grid">
+            <div class="about-image">
+                <img src="./assets/images/Profile.jpg" alt="image" class="about-img">
+                <div class="about-box"></div>
             </div>
-            <div class="about__info">
-                <p class="about__desc">
-                    Passionate about creating <b>Mobile Apps</b> with <b>UI / UX</b>.                  
+            <div class="about-info">
+                <p class="about-desc">
+                    Passionate about creating <b>Game</b> using <b>Unity</b>.
                 </p>
-                <ul class="about__list">
-                    <li class="about__item">
-                    Also interest in <b>Animation</b>, <b>3D Modeling</b>, <b>Game Development</b> & <b>Video Editing</b>.
+                <ul class="about-list">
+                    <li class="about-item">
+                    Also interest in <b>Animation</b>, <b>Mobile App Development</b> & <b>Video Editing</b>.
                     </li>
                 </ul>
-                <div class="about__buttons">
-                    <a href="mailto:jhtan2000@gmail.com" class="button">
-                    <i class="uil-envelope-alt"></i> Contact Me
-                    </a>
+                <div class="about-button">
                     <a href="https://www.linkedin.com/in/jiahuitan1202/" target="_blank" class="button">
-                    <i class="uil-linkedin-alt"></i>
+                    <i class="uil-linkedin-alt"></i><h3>Linkedin</h3>
                     </a>
                 </div>
             </div>
@@ -152,47 +149,47 @@
             <h2 class="section-title">
                 <span>Education.</span>
             </h2>
-            <div class="edu__container container">
-                <div class="edu__content">
+            <div class="edu-container container">
+                <div class="edu-content">
                     <!-- education 01 -->
-                    <div class="edu__data">
+                    <div class="edu-data">
                     <div>
-                        <span class="edu__dot"></span>
-                        <span class="edu__line"></span>
+                        <span class="edu-dot"></span>
+                        <span class="edu-line"></span>
                     </div>
                     <div>
-                        <h3 class="edu__title">Bachelor of Engineering in Digital Media Technology</h3>
-                        <span class="edu__subtitle">Xiamen University Malaysia</span>
-                        <div class="edu__calendar">
+                        <h3 class="edu-title">Bachelor of Engineering in Digital Media Technology</h3>
+                        <span class="edu-subtitle">Xiamen University Malaysia</span>
+                        <div class="edu-calendar">
                             <i class="uil uil-calendar-alt"></i>
                             <span>2019 - now</span>
                         </div>
                     </div>
                     </div>
                     <!-- education 02 -->
-                    <div class="edu__data">
+                    <div class="edu-data">
                     <div>
-                        <span class="edu__dot"></span>
-                        <span class="edu__line"></span>
+                        <span class="edu-dot"></span>
+                        <span class="edu-line"></span>
                     </div>
                     <div>
-                        <h3 class="edu__title">Foundation in Science</h3>
-                        <span class="edu__subtitle">Xiamen University Malaysia</span>
-                        <div class="edu__calendar">
+                        <h3 class="edu-title">Foundation in Science</h3>
+                        <span class="edu-subtitle">Xiamen University Malaysia</span>
+                        <div class="edu-calendar">
                             <i class="uil uil-calendar-alt"></i>
                             <span>2018 - 2019</span>
                         </div>
                     </div>
                     </div>
                     <!-- education 03 -->
-                    <div class="edu__data">
+                    <div class="edu-data">
                     <div>
-                        <span class="edu__dot"></span>
+                        <span class="edu-dot"></span>
                     </div>
                     <div>
-                        <h3 class="edu__title">Sijil Pelajaran Malaysia (SPM)</h3>
-                        <span class="edu__subtitle">SMK Bandar Kota Tinggi</span>
-                        <div class="edu__calendar">
+                        <h3 class="edu-title">Sijil Pelajaran Malaysia (SPM)</h3>
+                        <span class="edu-subtitle">SMK Bandar Kota Tinggi</span>
+                        <div class="edu-calendar">
                             <i class="uil uil-calendar-alt"></i>
                             <span>2013 - 2017</span>
                         </div>
@@ -208,8 +205,8 @@
     - Footer
 -->
 <footer class="footer" id="footer">
-    <div class="footer__container container grid">
-        <div class="footer__social">
+    <div class="footer-container container grid">
+        <div class="footer-social">
             <a href="mailto:jhtan2000@gmail.com" target="_blank" class="social-link">
             <i class="uil-envelope-alt"></i>
             </a>
@@ -217,7 +214,7 @@
             <i class="uil-linkedin-alt"></i>
             </a>
         </div>
-        <span class="footer__copy">
+        <span class="footer-credit">
             Credit &#169; 2023 by JH. 
         </span>
     </div>
