--- a/projects/animation.html
+++ b/projects/animation.html
@@ -60,25 +60,25 @@
 </header>
 
 <section class="project" id="project">
-    <div class="project__container container grid">
-        <h2 class="project__title">
+    <div class="project-container container grid">
+        <h2 class="project-title">
             <span>Animation.</span>
         </h2>
         <!-- Project #1 -->
-        <article class="project__card grid">
+        <article class="project-card grid">
             <video controls>
                 <source src="./video/Christmas Eve.mp4" type="video/mp4">
             </video>
-            <div class="project__content">
-                <div class="content__title">
-                    <h1 class="content__no">01.</h1>
-                    <h3 class="content__name">[Group Project] Christmas Eve</h3>
-                    <span class="content__tag">2D, Animate CC</span>
+            <div class="project-content">
+                <div class="content-title">
+                    <h1 class="content-no">01.</h1>
+                    <h3 class="content-name">[Group Project] Christmas Eve</h3>
+                    <span class="content-tag">2D, Animate CC</span>
                 </div>
-                <p class="content__desc">
+                <p class="content-desc">
                     This is my 2D Animation class's final project. Christmas Eve is a horror cartoon that took place on Christmas Eve.
                 </p>
-                <div class="content__buttons">
+                <div class="content-buttons">
                     <a href="https://youtu.be/Uox5MJEKYX4" target="_blank" class="button">
                         <i class="uil-youtube"></i> Full Video
                     </a>
@@ -87,22 +87,22 @@
         </article>
 
         <!-- Project #2 -->
-        <article class="project__card grid">
+        <article class="project-card grid">
             <video controls>
                 <source src="./video/A Little Kindness Goes a Long Way.mp4" type="video/mp4">
             </video>
-            <div class="project__content">
-                <div class="content__title">
-                    <h1 class="content__no">02.</h1>
-                    <h3 class="content__name">[Group Project] A Little Kindness Goes a Long Way</h3>
-                    <span class="content__tag">3D, Autodesk Maya</span>
+            <div class="project-content">
+                <div class="content-title">
+                    <h1 class="content-no">02.</h1>
+                    <h3 class="content-name">[Group Project] A Little Kindness Goes a Long Way</h3>
+                    <span class="content-tag">3D, Autodesk Maya</span>
                 </div>
-                <p class="content__desc">
+                <p class="content-desc">
                     This is my 3D Animation Group final project. The title of this short animation is “A Little Kindness Goes a Long Way”. The story is about how a caring individual rescues a wandering stray dog and takes it home.
                     <br><br>
                     I am responsible for compiling and post-processing the animations and merging them into one.
                 </p>
-                <div class="content__buttons">
+                <div class="content-buttons">
                     <a href="https://youtu.be/Qs_rjEJ1A_k" target="_blank" class="button">
                         <i class="uil-youtube"></i> Full Video
                     </a>
@@ -116,8 +116,8 @@
     - Footer
 -->
 <footer class="footer" id="footer">
-    <div class="footer__container container grid">
-        <div class="footer__social">
+    <div class="footer-container container grid">
+        <div class="footer-social">
             <a href="mailto:jhtan2000@gmail.com" target="_blank" class="social-link">
             <i class="uil-envelope-alt"></i>
             </a>
@@ -125,7 +125,7 @@
             <i class="uil-linkedin-alt"></i>
             </a>
         </div>
-        <span class="footer__copy">
+        <span class="footer-credit">
             Credit &#169; 2023 by JH. 
         </span>
     </div>
