--- a/projects/game.html
+++ b/projects/game.html
@@ -60,25 +60,25 @@
 </header>
 
 <section class="project" id="project">
-    <div class="project__container container grid">
-        <h2 class="project__title">
+    <div class="project-container container grid">
+        <h2 class="project-title">
             <span>Game Development.</span>
         </h2>
         <!-- Project #1 -->
-        <article class="project__card grid">
+        <article class="project-card grid">
             <video controls>
                 <source src="./video/Building.mp4" type="video/mp4">
             </video>
-            <div class="project__content">
-                <div class="content__title">
-                    <h1 class="content__no">01.</h1>
-                    <h3 class="content__name">VR Environment Construction</h3>
-                    <span class="content__tag">[Individual Project] Construction, Autodesk Maya, Unity</span>
+            <div class="project-content">
+                <div class="content-title">
+                    <h1 class="content-no">01.</h1>
+                    <h3 class="content-name">VR Environment Construction</h3>
+                    <span class="content-tag">[Individual Project] Construction, Autodesk Maya, Unity</span>
                 </div>
-                <p class="content__desc">
+                <p class="content-desc">
                     The game environment is designed and developed using free assets from Unity Assets Store and modelled using Maya.
                 </p>
-                <div class="content__buttons">
+                <div class="content-buttons">
                     <a href="https://youtu.be/do08THSwa1M" target="_blank" class="button">
                         <i class="uil-youtube"></i> Behind Scene
                     </a>
@@ -87,34 +87,34 @@
         </article>
 
         <!-- Project #2 -->
-        <article class="project__card grid">
+        <article class="project-card grid">
             <video controls>
                 <source src="./video/VR Music Mesuem.mp4" type="video/mp4">
             </video>
-            <div class="project__content">
-                <div class="content__title">
-                    <h1 class="content__no">02.</h1>
-                    <h3 class="content__name">VR Music Museum</h3>
-                    <span class="content__tag">[Group Project] VR Application, Unity</span>
+            <div class="project-content">
+                <div class="content-title">
+                    <h1 class="content-no">02.</h1>
+                    <h3 class="content-name">VR Music Museum</h3>
+                    <span class="content-tag">[Group Project] VR Application, Unity</span>
                 </div>
-                <p class="content__desc">
+                <p class="content-desc">
                     VR Music Museum is a virtual reality (VR) educational application for music learning, such as Classic, Pop. I am in charge of programming in this project.
                 </p>
             </div>
         </article>
 
         <!-- Project #3 -->
-        <article class="project__card grid">
-            <div class="project__yt">
+        <article class="project-card grid">
+            <div class="project-yt">
                 <iframe src="https://www.youtube.com/embed/2swvcCoELXo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <div class="project__content">
-                <div class="content__title">
-                    <h1 class="content__no">03.</h1>
-                    <h3 class="content__name">Open Space Realistic Game Environment</h3>
-                    <span class="content__tag">[Individual Project] Terrain, Unity</span>
+            <div class="project-content">
+                <div class="content-title">
+                    <h1 class="content-no">03.</h1>
+                    <h3 class="content-name">Open Space Realistic Game Environment</h3>
+                    <span class="content-tag">[Individual Project] Terrain, Unity</span>
                 </div>
-                <p class="content__desc">
+                <p class="content-desc">
                     The game environment is designed using free assets from Unity Assets Store.
                 </p>
             </div>
@@ -127,8 +127,8 @@
     - Footer
 -->
 <footer class="footer" id="footer">
-    <div class="footer__container container grid">
-        <div class="footer__social">
+    <div class="footer-container container grid">
+        <div class="footer-social">
             <a href="mailto:jhtan2000@gmail.com" target="_blank" class="social-link">
             <i class="uil-envelope-alt"></i>
             </a>
@@ -136,7 +136,7 @@
             <i class="uil-linkedin-alt"></i>
             </a>
         </div>
-        <span class="footer__copy">
+        <span class="footer-credit">
             Credit &#169; 2023 by JH. 
         </span>
     </div>
