--- a/projects/video.html
+++ b/projects/video.html
@@ -60,39 +60,39 @@
 </header>
 
 <section class="project" id="project">
-    <div class="project__container container grid">
-        <h2 class="project__title">
+    <div class="project-container container grid">
+        <h2 class="project-title">
             <span>Video Editing.</span>
         </h2>
         <!-- Project #1 -->
-        <article class="project__card grid">
-            <div class="project__yt">
+        <article class="project-card grid">
+            <div class="project-yt">
                 <iframe src="https://www.youtube.com/embed/TzOEBGOONkw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <div class="project__content">
-                <div class="content__title">
-                    <h1 class="content__no">01.</h1>
-                    <h3 class="content__name">Daily Life of Online Class</h3>
-                    <span class="content__tag">[Individual Project] One-shot, Premiere Pro</span>
+            <div class="project-content">
+                <div class="content-title">
+                    <h1 class="content-no">01.</h1>
+                    <h3 class="content-name">Daily Life of Online Class</h3>
+                    <span class="content-tag">[Individual Project] One-shot, Premiere Pro</span>
                 </div>
-                <p class="content__desc">
+                <p class="content-desc">
                     The Covid-19 epidemic is depicted in the background of this video. It depicts students' daily lives as they are participating in morning online classes.
                 </p>
             </div>
         </article>
 
         <!-- Project #2 -->
-        <article class="project__card grid">
-            <div class="project__yt">
+        <article class="project-card grid">
+            <div class="project-yt">
                 <iframe src="https://www.youtube.com/embed/qDRyYX6NZAc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <div class="project__content">
-                <div class="content__title">
-                    <h1 class="content__no">02.</h1>
-                    <h3 class="content__name">Intangible Cultural Heritage - Lacquer Thread Sculpture</h3>
-                    <span class="content__tag">[Group Project] Documentary Video, Premiere Pro</span>
+            <div class="project-content">
+                <div class="content-title">
+                    <h1 class="content-no">02.</h1>
+                    <h3 class="content-name">Intangible Cultural Heritage - Lacquer Thread Sculpture</h3>
+                    <span class="content-tag">[Group Project] Documentary Video, Premiere Pro</span>
                 </div>
-                <p class="content__desc">
+                <p class="content-desc">
                     Lacquer thread sculpture is the heritage of ancient Buddhist sculpture art, it was inspired by the lacquer thread technology of Song and Yuan dynasties, especially the Drain powder and clay line carving skills.
                     <br><br>
                     In this documentary video, my groupmate visited Master Chen Wen Long in Hongtang, Xike Town, Tong 'an District, Xiamen city to closely learn more about lacquer thread sculpture culture. 
@@ -103,17 +103,17 @@
         </article>
 
         <!-- Project #3 -->
-        <article class="project__card grid">
-            <div class="project__yt">
+        <article class="project-card grid">
+            <div class="project-yt">
                 <iframe src="https://www.youtube.com/embed/Eea9f6bKAJ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <div class="project__content">
-                <div class="content__title">
-                    <h1 class="content__no">03.</h1>
-                    <h3 class="content__name">Busy for Nothing</h3>
-                    <span class="content__tag">[Individual Project] Short Video, Premiere Pro, After Effect</span>
+            <div class="project-content">
+                <div class="content-title">
+                    <h1 class="content-no">03.</h1>
+                    <h3 class="content-name">Busy for Nothing</h3>
+                    <span class="content-tag">[Individual Project] Short Video, Premiere Pro, After Effect</span>
                 </div>
-                <p class="content__desc">
+                <p class="content-desc">
                     This short video narrates the story of an designer whose client frequently requests that she make changes to the design of her project file. She rapidly completed the adjustments to her project at the client's urging. Due to exhaustion, she accidentally sent the first project file that she had given in previously, but the customer requested advanced design adjustments on it. In the end, the client is satisfied with the design of that project file, but the designer felt her efforts were for nothing.
                 </p>
             </div>
@@ -126,8 +126,8 @@
     - Footer
 -->
 <footer class="footer" id="footer">
-    <div class="footer__container container grid">
-        <div class="footer__social">
+    <div class="footer-container container grid">
+        <div class="footer-social">
             <a href="mailto:jhtan2000@gmail.com" target="_blank" class="social-link">
             <i class="uil-envelope-alt"></i>
             </a>
@@ -135,7 +135,7 @@
             <i class="uil-linkedin-alt"></i>
             </a>
         </div>
-        <span class="footer__copy">
+        <span class="footer-credit">
             Credit &#169; 2023 by JH. 
         </span>
     </div>
