--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
                 <!-- Game Project #1 -->
                 <div class="project-card grid">
                     <div class="project-media">
-                        <video controls>
-                            <source src="./assets/video/AI 3046 Trailer.mp4" type="video/mp4">
-                        </video>
+                        <iframe src="https://www.youtube.com/embed/fPCwISCaU8Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     <div class="project-content">
                         <div class="project-title">
@@ -213,7 +211,7 @@
                 <div class="project-card grid">
                     <div class="project-media">
                         <video controls>
-                            <source src="./assets/video/Big Dreamer_Secene1.mp4" type="video/mp4">
+                            <source src="./assets/video/Big Dreamer_Scene1.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="project-content">
