--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <!-- Game Project #1 -->
                 <div class="project-card grid">
                     <div class="project-media">
-                        <iframe src="https://www.youtube.com/embed/fPCwISCaU8Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/r0aGJHJcr5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     <div class="project-content">
                         <div class="project-title">
