--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             </p>
                         </div>
                         <div class="project-btn">
-                            <a href="https://youtu.be/do08THSwa1M" target="_blank" class="btn">
+                            <a href="https://youtu.be/Qs_rjEJ1A_k" target="_blank" class="btn">
                                 <i class="uil uil-youtube"></i> Full Video
                             </a>
                         </div>
@@ -227,11 +227,13 @@
                                 I was responsible for this section's animation.
                             </p>
                         </div>
+                        <!--
                         <div class="project-btn">
                             <a href="https://youtu.be/do08THSwa1M" target="_blank" class="btn">
                                 <i class="uil uil-youtube"></i> Full Video
                             </a>
                         </div>
+                        -->
                     </div>
                 </div>
 
@@ -256,7 +258,7 @@
                             </p>
                         </div>
                         <div class="project-btn">
-                            <a href="https://youtu.be/do08THSwa1M" target="_blank" class="btn">
+                            <a href="https://youtu.be/Uox5MJEKYX4" target="_blank" class="btn">
                                 <i class="uil uil-youtube"></i> Full Video
                             </a>
                         </div>
