--- a/index.html
+++ b/index.html
@@ -83,7 +83,43 @@
             <!-- Project Type #1 -->
             <div class="tab active">
 
-                <!-- Game Project #1 -->
+                <!-- Game Project #4 -->
+                <div class="project-card grid">
+                    <div class="project-media">
+                        <iframe src="https://www.youtube.com/embed/FXdysHTRKPQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-title">
+                            <h3 class="title-name">Lost Memory</h3>
+                            <span class="title-tag">[Individual] Timeline Video - Unreal Engine 4, Bridge</span>
+                        </div>
+                        <div class="project-info">
+                            <p>
+                                The story starts with a woman who woke up with no memory in an abandoned house deep in a lost forest. As she explores the forest, she discovered a broken mansion. Inside, she saw a bloodstained chair surrounded by crows, which triggered fragmented flashbacks and began to unlock her buried memories.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Game Project #3 -->
+                <div class="project-card grid">
+                    <div class="project-media">
+                        <iframe src="https://www.youtube.com/embed/SpyNBtBjODw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-title">
+                            <h3 class="title-name">Rolling Adventure - A Tale in the Sky</h3>
+                            <span class="title-tag">[Individual] Rolling Game - Unreal Engine 4, Blueprint</span>
+                        </div>
+                        <div class="project-info">
+                            <p>
+                                <span>Rolling Adventure - A Tale in the Sky</span> is a fantasy ball-rolling adventure game. Players control a turret ball, navigating through ancient floating buildings to reach the end of each level.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Game Project #2 -->
                 <div class="project-card grid">
                     <div class="project-media">
                         <iframe src="https://www.youtube.com/embed/r0aGJHJcr5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -104,7 +140,7 @@
                     </div>
                 </div>
 
-                <!-- Game Project #2 -->
+                <!-- Game Project #1 -->
                 <div class="project-card grid">
                     <div class="project-media">
                         <video controls>
@@ -132,7 +168,25 @@
             <!-- Project Type #2 -->
             <div class="tab">
 
-                <!-- App Project #1 -->
+                 <!-- App Project #2 -->
+                <div class="project-card grid">
+                    <div class="project-media">
+                        <iframe src="https://www.youtube.com/embed/bSOOOCgOTnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-title">
+                            <h3 class="title-name">AR Greeting and Business Card</h3>
+                            <span class="title-tag">[Individual] AR App - Unity, Vuforia</span>
+                        </div>
+                        <div class="project-info">
+                            <p>
+                                <span>AR Greeting and Business Card</span> is my first AR assignment application using Unity and Vuforia.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- App Project #2 -->
                 <div class="project-card grid">
                     <div class="project-media">
                         <iframe src="https://www.youtube.com/embed/ExsO3YzFK54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -153,7 +207,7 @@
                     </div>
                 </div>
 
-                <!-- App Project #2 -->
+                <!-- App Project #1 -->
                 <div class="project-card grid">
                     <div class="project-media">
                         <iframe src="https://www.youtube.com/embed/1uio0uwWEn0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -179,7 +233,7 @@
             <!-- Project Type #3 -->
             <div class="tab">
 
-                <!-- Animation Project #1 -->
+                <!-- Animation Project #3 -->
                 <div class="project-card grid">
                     <div class="project-media">
                         <video controls>
@@ -237,7 +291,7 @@
                     </div>
                 </div>
 
-                <!-- Animation Project #3 -->
+                <!-- Animation Project #1 -->
                 <div class="project-card grid">
                     <div class="project-media">
                         <video controls>
@@ -270,7 +324,7 @@
             <!-- Project Type #4 -->
             <div class="tab">
 
-                <!-- Video Project #1 -->
+                <!-- Video Project #2 -->
                 <div class="project-card grid">
                     <div class="project-media">
                         <iframe src="https://www.youtube.com/embed/Eea9f6bKAJ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -288,7 +342,7 @@
                     </div>
                 </div>
 
-                <!-- Video Project #2 -->
+                <!-- Video Project #1 -->
                 <div class="project-card grid">
                     <div class="project-media">
                         <iframe src="https://www.youtube.com/embed/qDRyYX6NZAc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
