--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
             <div class="about-data">
                 <div class="about-desc">
                     <p>
-                        Hi, my name is <span>Tan Jia Hui</span>. I am a final year student majoring in <a href="https://www.xmu.edu.my/2023/1226/c16268a482521/page.htm">Digital Media Technology</a> at <a href="https://www.xmu.edu.my/">Xiamen University Malaysia</a>.
+                        Hi, my name is <span>Tan Jia Hui</span>.  I am a recent graduate with a degree in Digital Media Technology from Xiamen University Malaysia.
                     </p>
                     <p>
                         - Passionate in developing <b>Game</b> using <b>Unity</b>.
@@ -66,10 +66,9 @@
                 </div>
                 <div class="about-info">
 
-                        <span>I also have skills in:</span>
+                        <span>I also interest in:</span>
                         <ul>
-                            <li>Mobile Application Development (Android Studio & Figma)</li>
-                            <li>Game Design & Development (Unity)</li>
+                            <li>UI/UX Design (Figma)</li>
                             <li>3D Modeling (3Ds & Maya)</li>
                             <li>Animation (Animate CC & Maya)</li>
                             <li>Front-End Development (HTML & CSS)</li>
