--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 <div class="btns">
                     <div class="about-btn">
-                        <a href="https://youtu.be/do08THSwa1M" target="_blank" class="btn">
+                        <a href="https://www.linkedin.com/in/jiahuitan1202/" target="_blank" class="btn">
                             <i class="uil uil-linkedin"></i> Linkedin
                         </a>
                     </div>
