--- a/projects/app.html
+++ b/projects/app.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="project-btn">
                         <div class="btn modal-btn">
-                            <i class="uil uil-presentation-play"></i> Figma
+                            <i class="uil uil-presentation-play"></i> UI
                         </div>
                     </div>
                 </div>
