--- a/projects/game.html
+++ b/projects/game.html
@@ -120,7 +120,7 @@
                     </div>
                     <div class="project-btn">
                         <div class="btn modal-btn">
-                            <i class="uil uil-presentation-play"></i> Figma
+                            <i class="uil uil-presentation-play"></i> UI
                         </div>
                     </div>
                 </div>
