--- a/projects/app.html
+++ b/projects/app.html
@@ -61,7 +61,7 @@
 
             <div class="project-card grid">
                 <div class="project-media">
-                    <iframe src="https://www.youtube.com/embed/bSOOOCgOTnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/TyHb7bWhnqw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="project-desc">
                     <div class="project-title">
